package bioladen.finances;

import bioladen.product.InventoryProductCatalog;
import org.springframework.security.access.prepost.PreAuthorize;
import org.springframework.stereotype.Controller;
import org.springframework.ui.Model;
import org.springframework.util.Assert;
import org.springframework.web.bind.annotation.*;

/**
 * Controller for the wishlist.
 *
 * @author Lukas Petzold
 */
@Controller
@SessionAttributes({"shoppingCart"})

public class CartController {

	private final InventoryProductCatalog inventoryProductCatalog;


	CartController(InventoryProductCatalog inventoryProductCatalog) {
		this.inventoryProductCatalog = inventoryProductCatalog;
	}


	@ModelAttribute("shoppingCart")
	ShoppingCart initializeShoppingCart() {

		return new ShoppingCart();
	}

	@PreAuthorize("!(hasRole('ROLE_MANAGER')||hasRole('ROLE_STAFF'))")
	@RequestMapping("/wishlist")
	String wishlist(@ModelAttribute ShoppingCart shoppingCart, Model model) {
		model.addAttribute("shoppingCart", shoppingCart);
		return "wishlist";
	}


	/**
	 * Add a product to the shoppingCart.
	 *
	 * @param pid The product with the String pid gets added to the shoppingCart.
	 * @param shoppingCart The products get stored here.
	 */
	@GetMapping("/addToWishlist")
	String addToWishlist(@RequestParam("productId") Long pid, @ModelAttribute ShoppingCart shoppingCart, Model model) {

		Assert.notNull(pid, "Product must not be null!");

		try {
			shoppingCart.addOrUpdateItem(inventoryProductCatalog.findById(pid).get(), 1);
			model.addAttribute("shoppingCart", shoppingCart);
		} catch (Exception e) {
		model.addAttribute("errorInWishlist", true);
		}

		return "redirect:/productlist";
	}


	/**
	 * Deletes an item from the shoppingCart.
	 *
	 * @param pid The item with the String pid gets removed from the shoppingCart.
	 */
	@PostMapping("/deleteFromWishlist")
	String deleteFromWishlist(
			@RequestParam("productId") String pid,
			@ModelAttribute ShoppingCart shoppingCart,
			Model model) {

		Assert.notNull(pid, "Product must not be null!");

		try {
			shoppingCart.removeItem(pid);
			model.addAttribute("shoppingCart", shoppingCart);
		} catch (Exception e) {
			model.addAttribute("errorInWishlist", true);
		}

		return "wishlist";
	}


	/**
	 * Adds one quantity of the item to the shoppingCart.
	 *
	 * @param pid The quantity of the item with the pid gets incremented by 1.
	 */
	@PostMapping("/addOneToWishlist")
	String addOneToWishlist(
			@RequestParam("productId") String pid,
			@ModelAttribute ShoppingCart shoppingCart,
			Model model) {

		Assert.notNull(pid, "Product must not be null!");

		try {
			shoppingCart.addOrUpdateItem(shoppingCart.getItem(pid).get().getInventoryProduct(), 1);
			model.addAttribute("shoppingCart", shoppingCart);
		} catch (Exception e) {
			model.addAttribute("errorInWishlist", true);
		}

		return "wishlist";
	}


	/**
	 * Removes one quantity of the item from the shoppingCart.
	 *
	 * @param pid The quantity of the item with the pid gets decremented by 1.
	 */
	@PostMapping("/removeOneFromWishlist")
	String removeOneFromWishlist(
			@RequestParam("productId") String pid,
			@ModelAttribute ShoppingCart shoppingCart,
			Model model) {

		Assert.notNull(pid, "Product must not be null!");

		try {
			if (shoppingCart.getItem(pid).get().getQuantity() == 1) {
				shoppingCart.removeItem(pid);
			} else {
				shoppingCart.addOrUpdateItem(shoppingCart.getItem(pid).get().getInventoryProduct(), -1);
				model.addAttribute("shoppingCart", shoppingCart);
			}
		} catch (Exception e) {
			model.addAttribute("errorInWishlist", true);
		}


		return "wishlist";
	}

}
