@startuml

!include stylesheet.iuml


rectangle Bioladen {
    namespace bioladen.finances {

        class CashierSystem <<Controller>> {
            -inventoryProductCatalog : InventoryProductCatalog
            -customerRepository : CustomerRepository
            -authenticationManager : AuthenticationManager

            +CashierSystem(InventoryProductCatalog, CustomerRepository, AuthenticationManager)
            +addProduct(String, long, ShoppingCart) : String
            +deleteProduct(String, ShoppingCart) : String
            +calcChange(double, ShoppingCart) : String
            +userId(long, ShoppingCart) : String
            +addPfand(Long, Long) : String
            +finish(ShoppingCart) : String
            +abort(ShoppingCart) : String
            +pushShoppingCart(ShoppingCart, EntityLevel, String) : void
        }

        class CartController <<Controller>> {
            -inventoryProductCatalog : InventoryProductCatalog

            +CartController(InventoryProductCatalog)
            +addToWishlist(String, ShoppingCart) : String
            +deleteFromWishlist(String, ShoppingCart) : String
            +addOneToWishlist(String, ShoppingCart) : String
            +removeOneFromWishlist(String, ShoppingCart) : String
        }

        class ShoppingCart <<Entity>> {
            -items : Map<InventoryProduct, CartCartItem>
            -pfand : Map<BigDecimal, Long>
            -customer : Customer

            +addOrUpdateItem(InventoryProduct, long) : CartCartItem
            +removeItem(String) : Optional<CartCartItem>
            +getItem(String) : Optional<CartCartItem>
            +clear() : void
            +isEmpty() : boolean
            +getPrice() : BigDecimal
            +getBasicPrice() : BigDecimal
            +getAmountOfItems() : int
            +getCustomerDiscountString() : String
            +getDiscount() : double
            +addOrUpdatePfand(BigDecimal, Long) : Long
            +getPfandMoney() : BigDecimal
            +getMwstMoney() : BigDecimal
            +getSaleMoney() : BigDecimal
        }

        class CartCartItem <<Entity>> {
            -id : String
            -price : BigDecimal
            -quantity : long
            -inventoryProduct : InventoryProduct

            +CartCartItem(InventoryProduct, long)
            -CartCartItem(String, Product, long)
            +getProductName() : String
            +add(long) : CartCartItem
        }

        class ShoppingCartCancel <<Entity>> extends ShoppingCart {
            -customer : Customer
            -amountOfItems: int

            +defineCharts() : Map<String, DataHistoryRequest>
            +sumUp(String, Double) : Double
        }

        class ShoppingCartSale <<Entity>> extends ShoppingCart {
            -customer : Customer
            -pfandMoney : BigDecimal
            -mwstMoney : BigDecimal
            -saleMoney : BigDecimal

            +defineCharts() : Map<String, DataHistoryRequest>
            +sumUp(String, Double) : Double
        }

        CashierSystem --> ShoppingCart
        CartController --> ShoppingCart
        ShoppingCart --> CartCartItem

    }

    namespace bioladen.event {
        class EntityCreatedEvent {

        }

        bioladen.finances.CashierSystem --> bioladen.event.EntityCreatedEvent

    }

    namespace ressources.templates {

        VIEW(cashiersystem.html) {

        }

        VIEW(wishlist.html) {

        }

        bioladen.finances.CashierSystem --> cashiersystem.html
        bioladen.finances.CartController --> wishlist.html
    }

    namespace bioladen.customer {

            class Customer <<Entity>> {

            }

            bioladen.finances.ShoppingCart "1" -left-> "1" Customer
            bioladen.finances.CashierSystem "1" -left-> "1" Customer
        }

}



rectangle salespoint-framework-7.0.0.RELEASE.jar {

    namespace org.salespointframework.context {
        class ApplicationEvent <<Salespoint>>{

        }

        ApplicationEvent <|-- bioladen.event.EntityCreatedEvent
    }

}


@enduml